--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-12 mb-3">
           <h1 class="text-center">Chit Chat</h1>
-          <p class="text-center">Connect with people from all over in real time!</p>
+          <p class="text-center">Chat with people from all over in real time!</p>
           <p class="text-center" id='user-count'></p>
         </div>
         <div class="col-12">
