--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
 
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="/js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
